chore: compile protos
